crates/weaver-renderer/src/static_site/snapshots/weaver_renderer__static_site__tests__weaver_block_aside_class.snap
---
source: crates/weaver-renderer/src/static_site/tests.rs
expression: output
---
<aside>
<p>This paragraph should be in an aside.</p>
</aside>
