crates/weaver-renderer/src/static_site/snapshots/weaver_renderer__static_site__tests__weaver_block_before_blockquote.snap
---
source: crates/weaver-renderer/src/static_site/tests.rs
expression: output
---
<aside>
<blockquote>
<p>This blockquote is in an aside.</p>
</blockquote>
</aside>
