crates/weaver-renderer/src/static_site/snapshots/weaver_renderer__static_site__tests__weaver_block_before_heading.snap
---
source: crates/weaver-renderer/src/static_site/tests.rs
expression: output
---
<aside>
<h2>Heading in aside</h2>
<p dir="ltr">Paragraph also in aside.</p>
</aside>
