crates/weaver-renderer/src/static_site/snapshots/weaver_renderer__static_site__tests__weaver_block_before_list.snap
---
source: crates/weaver-renderer/src/static_site/tests.rs
expression: output
---
<aside>
<ul>
<li>Item 1</li>
<li>Item 2</li>
</ul>
</aside>
