crates/weaver-renderer/src/static_site/snapshots/weaver_renderer__static_site__tests__weaver_block_custom_attributes.snap
---
source: crates/weaver-renderer/src/static_site/tests.rs
expression: output
---
<div class="foo" width="300px" data-test="value">
<p dir="ltr">Paragraph with class and attributes.</p>
</div>
