crates/weaver-renderer/src/static_site/snapshots/weaver_renderer__static_site__tests__weaver_block_custom_class.snap
---
source: crates/weaver-renderer/src/static_site/tests.rs
expression: output
---
<div class="highlight">
<p>This paragraph has a custom class.</p>
</div>
