crates/weaver-renderer/src/static_site/snapshots/weaver_renderer__static_site__tests__weaver_block_multiple_classes.snap
---
source: crates/weaver-renderer/src/static_site/tests.rs
expression: output
---
<aside class="highlight important">
<p>Multiple classes applied.</p>
</aside>
