crates/weaver-renderer/src/static_site/snapshots/weaver_renderer__static_site__tests__weaver_block_no_effect_on_following.snap
---
source: crates/weaver-renderer/src/static_site/tests.rs
expression: output
---
<aside>
<p dir="ltr">First paragraph in aside.</p>
</aside>
<p dir="ltr">Second paragraph NOT in aside.</p>
